# NativeKotlinServer

./: .gitignore  build.gradle  settings.gradle
jni/: CMakeLists.txt  build.sh  cn_tursom_data_DataKt.cpp  cn_tursom_data_DataKt.h  cn_tursom_unsafe_NetUtils.cpp  cn_tursom_unsafe_NetUtils.h  makeHeaderFile.sh  net.cpp  net.h
src/main/kotlin/cn/tursom/: main.kt
src/main/kotlin/cn/tursom/data/: Data.kt
src/main/kotlin/cn/tursom/unsafe/: NetUtils.kt
